--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -36,8 +36,11 @@
 \def\AugerXmaxICRC2017Paper{Bellido:2017cgf}
 \def\AugerAsymmetryPaper{Aab:2016enk}
 \def\AugerDeltaPaper{Aab:2017cgk}
+\def\AugerXmaxPRLPaper{Abraham:2010yv}
 \def\TAXmaxPaper{Jui:2011vm}
 \def\HiResPaper{AbuZayyad:2000uu}
+\def\HiResXmaxPaper{Abbasi:2004nz}
+\def\HiResSpecPaper{Abbasi:2009ix}
 \def\FlysEyesPaper{Baltrusaitis:1985mx}
 \def\MIAPaper{Borione:1994iy}
 \def\HiResMIAMuonPaper{AbuZayyad:1999xa}
