--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,242 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Takeda:1998ps,
+      author         = "Takeda, M. and others",
+      title          = "{Extension of the cosmic ray energy spectrum beyond the
+                        predicted Greisen-Zatsepin-Kuz'min cutoff}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "81",
+      year           = "1998",
+      pages          = "1163-1166",
+      doi            = "10.1103/PhysRevLett.81.1163",
+      eprint         = "astro-ph/9807193",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/9807193;%%"
+}
+
+@article{AgasaSpecPaper1995,
+   author = {{Yoshida}, S. and {Hayashida}, N. and {Honda}, K. and {Honda}, M. and 
+	{Imaizumi}, S. and {Inoue}, N. and {Kadota}, K. and {Kakimoto}, F. and 
+	{Kamata}, K. and {Kawaguchi}, S. and {Kawasumi}, N. and {Matsubara}, Y. and 
+	{Murakami}, K. and {Nagano}, M. and {Ohoka}, H. and {Teshima}, M. and 
+	{Tsushima}, I. and {Yoshii}, H.},
+    title = "{The cosmic ray energy spectrum above $3\times 10^{18}$ eV measured by the Akeno Giant Air Shower Array}",
+  journal = {Astroparticle Physics},
+     year = 1995,
+    month = mar,
+   volume = 3,
+    pages = {105-123},
+      doi = {10.1016/0927-6505(94)00036-3}
+}
+
+
+@article{Abbasi:2009ix,
+      author         = "Abbasi, R. U. and others",
+      title          = "{Measurement of the Flux of Ultra High Energy Cosmic Rays
+                        by the Stereo Technique}",
+      collaboration  = "HiRes",
+      journal        = "Astropart. Phys.",
+      volume         = "32",
+      year           = "2009",
+      pages          = "53-60",
+      doi            = "10.1016/j.astropartphys.2009.06.001",
+      eprint         = "0904.4500",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:0904.4500;%%"
+}
+
+@article{LinsleySpec1963,
+   author = {{Linsley}, J.},
+    title = "{Primary cosmic rays of energy 10$^{17}$ to 10$^{20}$ ev, the energy spectrum and arrival directions}",
+  journal = {International Cosmic Ray Conference},
+     year = 1963,
+   volume = 4,
+    pages = {77}
+}
+
+@article{Abraham:2008ru,
+      author         = "Abraham, J. and others",
+      title          = "{Observation of the suppression of the flux of cosmic
+                        rays above $4\times 10^{19}$eV}",
+      collaboration  = "Pierre Auger",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "101",
+      year           = "2008",
+      pages          = "061101",
+      doi            = "10.1103/PhysRevLett.101.061101",
+      eprint         = "0806.4302",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "FERMILAB-PUB-08-314-A-CD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:0806.4302;%%"
+}
+
+@article{Abbasi:2004nz,
+      author         = "Abbasi, R. U. and others",
+      title          = "{A Study of the composition of ultrahigh energy cosmic
+                        rays using the High Resolution Fly's Eye}",
+      collaboration  = "HiRes",
+      journal        = "Astrophys. J.",
+      volume         = "622",
+      year           = "2005",
+      pages          = "910-926",
+      doi            = "10.1086/427931",
+      eprint         = "astro-ph/0407622",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0407622;%%"
+}
+
+@article{Abraham:2010yv,
+      author         = "Abraham, J. and others",
+      title          = "{Measurement of the Depth of Maximum of Extensive Air
+                        Showers above $10^{18}$ eV}",
+      collaboration  = "Pierre Auger",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "104",
+      year           = "2010",
+      pages          = "091101",
+      doi            = "10.1103/PhysRevLett.104.091101",
+      eprint         = "1002.0699",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-10-065-A-PPD",
+      SLACcitation   = "%%CITATION = ARXIV:1002.0699;%%"
+}
+
+@article{Aab:2016zth,
+      author         = "Aab, Alexander and others",
+      title          = "{Combined fit of spectrum and composition data as
+                        measured by the Pierre Auger Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "JCAP",
+      volume         = "1704",
+      year           = "2017",
+      number         = "04",
+      pages          = "038",
+      doi            = "10.1088/1475-7516/2017/04/038",
+      eprint         = "1612.07155",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-16-618",
+      SLACcitation   = "%%CITATION = ARXIV:1612.07155;%%"
+}
+
+@article{Globus:2015xga,
+      author         = "Globus, Noemie and Allard, Denis and Parizot, Etienne",
+      title          = "{A complete model of the cosmic ray spectrum and
+                        composition across the Galactic to extragalactic
+                        transition}",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
+      year           = "2015",
+      number         = "2",
+      pages          = "021302",
+      doi            = "10.1103/PhysRevD.92.021302",
+      eprint         = "1505.01377",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1505.01377;%%"
+}
+
+@article{Unger:2015laa,
+      author         = "Unger, Michael and Farrar, Glennys R. and Anchordoqui,
+                        Luis A.",
+      title          = "{Origin of the ankle in the ultrahigh energy cosmic ray
+                        spectrum, and of the extragalactic protons below it}",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
+      year           = "2015",
+      number         = "12",
+      pages          = "123001",
+      doi            = "10.1103/PhysRevD.92.123001",
+      eprint         = "1505.02153",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1505.02153;%%"
+}
+
+@article{Biermann:2011wf,
+      author         = "Biermann, Peter L. and de Souza, Vitor",
+      title          = "{Centaurus A: the one extragalactic source of cosmic rays
+                        with energies above the knee}",
+      journal        = "Astrophys. J.",
+      volume         = "746",
+      year           = "2012",
+      pages          = "72",
+      doi            = "10.1088/0004-637X/746/1/72",
+      eprint         = "1106.0625",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1106.0625;%%"
+}
+
+@article{Aloisio:2011fv,
+      author         = "Aloisio, R. and Berezinsky, V. and Gazizov, A.",
+      title          = "{Disappointing model for ultrahigh-energy cosmic rays}",
+      booktitle      = "{Nuclear physics in astrophysics. Proceedings, 5th
+                        Conference, NPA5, Eilat, Israel, April 3-8, 2011}",
+      journal        = "J. Phys. Conf. Ser.",
+      volume         = "337",
+      year           = "2012",
+      pages          = "012042",
+      doi            = "10.1088/1742-6596/337/1/012042",
+      eprint         = "1105.1111",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1105.1111;%%"
+}
+
+@article{Allard:2005cx,
+      author         = "Allard, Denis and Parizot, E. and Olinto, A. V.",
+      title          = "{On the transition from galactic to extragalactic
+                        cosmic-rays: spectral and composition features from two
+                        opposite scenarios}",
+      journal        = "Astropart. Phys.",
+      volume         = "27",
+      year           = "2007",
+      pages          = "61-75",
+      doi            = "10.1016/j.astropartphys.2006.09.006",
+      eprint         = "astro-ph/0512345",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0512345;%%"
+}
+
+@article{Berezinsky:2005cq,
+      author         = "Berezinsky, Veniamin and Gazizov, A. Z. and Grigorieva,
+                        S. I.",
+      title          = "{Dip in UHECR spectrum as signature of proton interaction
+                        with CMB}",
+      journal        = "Phys. Lett.",
+      volume         = "B612",
+      year           = "2005",
+      pages          = "147-153",
+      doi            = "10.1016/j.physletb.2005.02.058",
+      eprint         = "astro-ph/0502550",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0502550;%%"
+}
+
+@article{Berezinsky:2002nc,
+      author         = "Berezinsky, V. and Gazizov, A. Z. and Grigorieva, S. I.",
+      title          = "{On astrophysical solution to ultrahigh-energy cosmic
+                        rays}",
+      journal        = "Phys. Rev.",
+      volume         = "D74",
+      year           = "2006",
+      pages          = "043005",
+      doi            = "10.1103/PhysRevD.74.043005",
+      eprint         = "hep-ph/0204357",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0204357;%%"
+}
+
 @article{Aglietta:2007yx,
       author         = "Abraham, J. and others",
       title          = "{Upper limit on the cosmic-ray photon flux above
@@ -1648,6 +1884,27 @@ year = {1968}
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%% PROCEEDINGS %%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
+
+@inproceedings{TASpec2017,
+      author         = "Tsunesada, Y. and AbuZayyad, T. and Ivanov, D. and Thomson, G. and Fujii, T. and Ikeda, D.",
+      title          = "{Energy Spectrum of Ultra-High-Energy Cosmic Rays
+Measured by The Telescope Array}",
+      booktitle      = "{Proceedings,  35th International Cosmic Ray Conference
+                        (ICRC 2017): Bexco, Busan, Korea, July 12-20, 2017}",
+      collaboration  = "Telescope Array",
+      year           = "2017"
+}
+
+@inproceedings{AugerSpec2017,
+      author         = "Fenu, F.",
+      title          = "{The cosmic ray energy spectrum measured using
+the Pierre Auger Observatory}",
+      booktitle      = "{Proceedings,  35th International Cosmic Ray Conference
+                        (ICRC 2017): Bexco, Busan, Korea, July 12-20, 2017}",
+      collaboration  = "Pierre Auger",
+      year           = "2017"
+}
+
 
 @inproceedings{HillasThinning1,
       author         = "Hillas, A.M.",
