--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,23 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{Fuhrmann:2013lgx,
+      author         = "Fuhrmann, Daniel and others",
+      title          = "{KASCADE-Grande measurements of energy spectra for
+                        elemental groups of cosmic rays}",
+      booktitle      = "{Proceedings, 33rd International Cosmic Ray Conference
+                        (ICRC2013): Rio de Janeiro, Brazil, July 2-9, 2013}",
+      collaboration  = "KASCADE Grande",
+      url            = "http://inspirehep.net/record/1247241/files/arXiv:1308.2098.pdf",
+      year           = "2013",
+      pages          = "0531",
+      eprint         = "1308.2098",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1308.2098;%%"
+}
+
+
 @article{Takeda:1998ps,
       author         = "Takeda, M. and others",
       title          = "{Extension of the cosmic ray energy spectrum beyond the
