--- a/uhecr.tex
+++ b/uhecr.tex
@@ -98,7 +98,8 @@ by KASCADE~\cite{\KASCADEPaper} and
 KASCADE-Grande~\cite{\KASCADEGrandePaper} experiments. By using an experimental setup
 that included surface detectors able to measured both number of charged particles and
 number of muons in air showers, it was possible to measure the all particle spectrum
-as well as to infer the spectra of individual groups of particles. In~\cref{}
+as well as to infer the spectra of individual groups of particles.
+In~\cref{fig:uhecr:overview:spec:kascade}
 we show the results of both experiments. Althought the final spectra are
 strongly dependend on the hadronic interaction models
 (see~\cref{sec:shower:simulations:models}) used in the analysis,
@@ -108,6 +109,23 @@ of the suppression of the proton component of the spectrum~\cite{Antoni:2005wq},
 a rigidity dependent suppression~\cite{Antoni:2005wq} and (c) the second-knee coincides
 with the suppression of the heaviest group of particles,
 including iron nuclei~\cite{Apel:2011mi,Apel:2013uni}. 
+
+%%%%%%%%%%%%%% SPEC KASCADE %%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{kascade_spec}
+    \put(18,60){}
+  \end{overpic}
+
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{kascade_grande_spec}
+    \put(18,60){}
+  \end{overpic}
+  
+  \caption{\cite{Antoni:2005wq} \cite{Fuhrmann:2013lgx}.}
+  \label{fig:uhecr:overview:spec:kascade}
+\end{figure}
+
 
 Although the rigidity dependent suppression as an explanation for the knee
 was a known hypothesis since it was suggested by Peters, in 1961~\cite{Peters1961},
