--- a/uhecr.tex
+++ b/uhecr.tex
@@ -9,9 +9,9 @@
 \label{sec:uhecr:overview}
 
 %%================================%%
-\subsection{History}
+%\subsection{History}
 
--history: HESS, Auger and UHE
+%-history: HESS, Auger and UHE
 
 %%================================%%
 \subsection{Energy spectrum}
@@ -62,7 +62,7 @@ has an area of 4000 m$^2$, while Pierre Auger
 Observatory~\cite{\AugerPaper} has an area of 3000 km$^2$ to measure particles above \E{18}.
 
 %%================================%%
-\subsubsection{Main features of the energy spectrum}
+%\subsubsection{Main features of the energy spectrum}
 
 The features of the cosmic ray spectrum are identified by the changes on the
 spectral index $\gamma$. To better visualize these changes, we show
@@ -354,6 +354,54 @@ of the end of the cosmic rays spectrum.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{The Pierre Auger Observatory}
 \label{sec:uhecr:auger}
+
+The Pierre Auger Observatory was designed to measure
+cosmic rays at the ultra-high energy range.
+It is located near the town of Malargue, Argentina,
+and its total area is approximately 3000 km$^2$.
+The average altitude of the experiment is 1420 m, which
+corresponds to a vertival atmospheric depth of approximately 880 g/cm$^2$.
+The construct of the observatory started in 2002 and completed in 2008.
+Its hybrid detection system, which combines a large surface detector 
+and a set of fluorescence telescopes, is one of the most important experimental features
+of the Pierre Auger Observatory.  
+
+
+The standard surface detector (SD) is composed by a set of $\sim 1660$
+water-Cherenkov detectors (WCD) which are regularly arranged in a triangular grid.
+The nearest neighbor distance of the stations for the standard array,
+which covers the full observatory area, is 1.5 km, while a small area of YYY km$^2$
+called \emph{SD infill} contains stations separated by 750 m.
+In~\cref{} the stations of the SD array
+are shown as black dots. Each WCD consists of a cylindrical tank with a diameter of 3.6 m,
+filled with 12 m$^3$ of ultra-high purity water, up to a height of 1.2 m. The particle
+detection is done by collecting the Cherenkov light produced by the passage of charged
+particle throught the water. For that, three photomultiplier tube (PMT) are installed
+on the top of each station and their signal are extracted and digitalised using FADCs
+with a sampling rate of 40 MHz. 
+More details about the surface detector can be found in Ref.\cite{}.
+
+The fluorescence detector (FD) is composed 
+
+
+
+-sd and fd
+-heat and infill
+-aera,amiga 
+-basic of reconstruction
+-auger prime
+
+
+-overview: malargue, dates, collaboration, area, hybrid 
+
+-figures with array and its components, aera, infill, heat
+
+-surface detectors
+
+-fluorescence detectors
+
+-hybrid reconstruction, energy calibration
+
 
 
 %%================================%%
